--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@
     --lh-2: 1.5;
 
     --space-1: 1.45rem;
-    --space-2: 1.55rem;
+    --space-2: 1.75rem;
     --space-3: 1.95rem;
 
     --ff-primary: 'Montserrat', sans-serif;
@@ -43,13 +43,14 @@ html {
 }
 
 body {
-    font-size: var(--fs-1);
     box-sizing: border-box;
+    font-size: var(--fs-1);
     font-weight: var(--fw-normal);
     font-family: var(--ff-primary);
     background-color: var(--clr-cream);
 }
 
+picture,
 img {
     display: block;
     max-width: 100%;
@@ -57,8 +58,10 @@ img {
 
 button {
     border: none;
+    font: inherit;
     cursor: pointer;
-    padding: 1.5rem 3rem;
+    padding: .7em 1.4em;
+    transition: all 320ms;
 }
 
 main {
@@ -71,50 +74,33 @@ main {
 .card {
     --padding: 2.4rem;
     --spacing: var(--space-2);
-    --br: 1.7rem;
+    --br: .8rem;
 
     overflow: hidden;
+    display: grid;
     font-size: var(--fs-2);
     line-height: var(--lh-0);
     border-radius: var(--br);
+    max-width: var(--card-width);
+    color: var(--clr-dark-grayish-blue);
     background-color: var(--clr-white);
-    width: min(var(--card-width), 100%);
 
     @media (min-width: 38em) {
         --spacing: var(--space-3);
-        --padding: 2.7rem;
+        --padding: 3rem;
 
-        display: flex;
-        flex-wrap: wrap;
-
-        &__img {
-            background-image: url("./images/image-product-mobile.jpg");
-        }
-    }
-
-    & > * {
-        flex: 1;
-        padding: var(--padding);
-    }
-
-    &__img {
-        min-height: 25rem;
-        background-color: var(--clr-dark-cyan);
-        background-image: url("./images/image-product-desktop.jpg");
-        background-size: cover;
-        background-position: center;
+        grid-template-columns: repeat(2, 1fr);
     }
 
     &__content {
-        display: flex;
-        flex-flow: column wrap;
+        display: grid;
+        padding: var(--padding);
         gap: var(--spacing);
     }
 
     &__category {
         letter-spacing: 4px;
         text-transform: uppercase;
-        color: var(--clr-dark-grayish-blue);
     }
 
     &__title {
@@ -122,15 +108,16 @@ main {
         font-family: var(--ff-secondary);
         font-weight: var(--fw-bold);
         line-height: var(--lh-1);
+        color: var(--clr-very-dark-blue);
     }
 
     &__description {
-        color: var(--clr-dark-grayish-blue);
         line-height: var(--lh-2);
     }
 
     &__price {
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         gap: var(--spacing);
 
@@ -139,11 +126,6 @@ main {
             color: var(--clr-dark-cyan);
             font-size: var(--fs-4);
         }
-
-        &--previous {
-            color: var(--clr-dark-grayish-blue);
-            text-decoration: line-through;
-        }
     }
 
     &__button {
@@ -151,10 +133,10 @@ main {
         font-size: var(--fs-3);
         font-weight: var(--fw-bold);
         background-color: var(--clr-dark-cyan);
-        border-radius: 8px;
-        transition: background-color 300ms;
+        border-radius: var(--br);
 
         display: flex;
+        flex-wrap: wrap;
         justify-content: center;
         align-items: center;
         gap: var(--space-1);
@@ -163,8 +145,7 @@ main {
             width: 1.6rem;
         }
 
-        &:hover,
-        &:active {
+        &:hover {
             background-color: var(--clr-very-dark-cyan);
         }
     }
